[package]
name = "the-binding-of-tetris"
version = "0.1.0"
authors = ["Hippolyte Mithouard <hippolyte.mithouard@gmail.com>,Berrichi Zineddine<zineddine.berrichi@gmail.com>,Nouh Master<nouh-master@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
piston_window = "0.93.0"
rand = "0.6.5"
